--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,17 @@
-@import "tailwindcss";
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+@import 'tailwindcss';
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f9fafc;
+}
+
+.title {
+  font-size: 24px;
+  font-weight: bold;
+  color: #2563ea;
+}
+
+.navContent {
+  color: #293042;
+  font-family: 16px;
+  font-weight: 400;
 }
