--- a/app/globals.css
+++ b/app/globals.css
@@ -5,9 +5,15 @@ body {
 }
 
 .title {
-  font-size: 24px;
+  font-size: 40px;
   font-weight: bold;
   color: #2563ea;
+}
+
+@media only screen and (max-width: 640) {
+  .title{
+    font-size: 32px;
+  }
 }
 
 .navContent {
